# RS_task

./: CMakeLists.txt  README.md  editdialog.cpp  editdialog.h  editdialog.ui  main.cpp  task.cpp  task.h  todoapp.cpp  todoapp.h  todoapp.ui
src/: CMakeLists.txt  Makefile  editdialog.cpp  editdialog.h  editdialog.ui  main.cpp  task.cpp  task.h  todoapp.cpp  todoapp.h  todoapp.ui
src/tests/: CMakeLists.txt  tests.cpp
